--- a/backend/env.example
+++ b/backend/env.example
@@ -22,7 +22,7 @@ SMTP_FROM=your-email@gmail.com
 EMAIL_FROM_NAME=Streamivus
 
 # Frontend URL (for password setup links in emails)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://tenant-management.vercel.app
 
 # Backend URL (for invoice PDF downloads in emails)
 BACKEND_URL=http://localhost:3000
