--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
