--- a/backend/env.example
+++ b/backend/env.example
@@ -27,3 +27,19 @@ FRONTEND_URL=https://tenant-management.vercel.app
 # Backend URL (for invoice PDF downloads in emails)
 BACKEND_URL=http://localhost:3000
 
+# OAuth Configuration
+# Google OAuth - Get credentials from https://console.cloud.google.com/
+# 1. Create a project in Google Cloud Console
+# 2. Enable Google+ API
+# 3. Create OAuth 2.0 credentials (Web application)
+# 4. Add authorized redirect URI: http://localhost:3000/api/auth/google/callback
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Facebook OAuth - Get credentials from https://developers.facebook.com/
+# 1. Create a new app in Facebook Developers
+# 2. Add Facebook Login product
+# 3. Configure OAuth redirect URI: http://localhost:3000/api/auth/facebook/callback
+FACEBOOK_APP_ID=your-facebook-app-id
+FACEBOOK_APP_SECRET=your-facebook-app-secret
+
