ekyc working update

--- a/backend/env.example
+++ b/backend/env.example
@@ -46,11 +46,12 @@ FACEBOOK_APP_SECRET=your-facebook-app-secret
 # Aadhaar eKYC Configuration (Sandbox.co.in)
 # Get API credentials from https://sandbox.co.in/
 # 1. Sign up for Sandbox.co.in account
-# 2. Get your API Key and API Secret
-# 3. Set the base URL (use sandbox for testing, production URL for live)
+# 2. Get your API Key and API Secret from the dashboard
+# 3. The service will automatically authenticate and get access token
+# 4. Set the base URL (use sandbox for testing, production URL for live)
 EKYC_API_KEY=your-ekyc-api-key
 EKYC_API_SECRET=your-ekyc-api-secret
 EKYC_API_BASE_URL=https://api.sandbox.co.in
-# Optional: Authentication method (apikey, basic, or bearer)
-EKYC_AUTH_METHOD=apikey
+# Optional: API version (defaults to 2.0)
+EKYC_API_VERSION=2.0
 
